feat: enhance feature cards with new styles and images for improved presentation

--- a/index.html
+++ b/index.html
@@ -326,7 +326,9 @@
         <div class="col-lg-4 col-12">
           <div class="feature-card">
             <i class="bi bi-arrow-up-right-circle-fill arrow-icon"></i>
-            <div class="icon-placeholder">Tuition Fees Image</div>
+            <div class="icon-placeholder">
+              <img src="assets/img/f2 (1).png" alt="">
+            </div>
             <h3>Tuition Fees Payment Service</h3>
             <p>Set and manage all your campus fee targets in one place. From tuition to library fines, stay on track
               with simple, intuitive goal-setting.</p>
@@ -337,7 +339,9 @@
         <div class="col-lg-4 col-12">
           <div class="feature-card">
             <i class="bi bi-arrow-up-right-circle-fill arrow-icon"></i>
-            <div class="icon-placeholder">Smart Payment Image</div>
+            <div class="icon-placeholder">
+              <img src="assets/img/f2 (2).png" alt="">
+            </div>
             <h3>Smart Payment Options</h3>
             <p>Enjoy flexible payment methods—DPAY, QR code, or credit-based services—so you can choose what fits your
               routine best.</p>
@@ -348,7 +352,9 @@
         <div class="col-lg-4 col-12">
           <div class="feature-card">
             <i class="bi bi-arrow-up-right-circle-fill arrow-icon"></i>
-            <div class="icon-placeholder">Top-Ups Image</div>
+            <div class="icon-placeholder">
+              <img src="assets/img/f2 (3).png" alt="">
+            </div>
             <h3>Hassle-Free Top-Ups</h3>
             <p>Instantly recharge your 1Card from anywhere—no more long queues or searching for spare change.</p>
           </div>
@@ -358,7 +364,9 @@
         <div class="col-lg-6 col-12">
           <div class="feature-card">
             <i class="bi bi-arrow-up-right-circle-fill arrow-icon"></i>
-            <div class="icon-placeholder">Fee Transfers Image</div>
+            <div class="icon-placeholder">
+              <img src="assets/img/f2 (1).png" alt="">
+            </div>
             <h3>Automated Fee Transfers</h3>
             <p>Schedule recurring payments for tuition or other regular fees. Focus on your studies, and let 1Card
               handle the deadlines.</p>
