--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
               </li>
               <li><a href="#pricing">Pricing</a></li>
               <li><a href="#pricing">Blog</a></li>
-              <li><a href="#contact">Contact</a></li>
+              <li><a href="contactus.html">Contact</a></li>
             </ul>
             <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
           </nav>
